add page translation

--- a/src/locales/ch/translation.json
+++ b/src/locales/ch/translation.json
@@ -83,6 +83,95 @@
     "new_browser_alert":"如果使用新浏览器登录，请给我发送电子邮件",
     "news_alert":"通过电子邮件通知我有关销售和最新消息的信息",
     "features_update_alert":"通过电子邮件向我发送有关新功能和更新的信息",
-    "tips_alert":"通过电子邮件向我发送有关使用帐户的提示"
+    "tips_alert":"通过电子邮件向我发送有关使用帐户的提示",
+    "login_activity_tagline": "这是你的最后一次 {{logData.length}} 登录活动日志.",
+
+    "security_settings_tagline": "这些设置可帮助您确保帐户安全。",
+    "save_my_activity_log":"保存我的活动日志",
+    "unusual_activity_tagline":"您可以保存所有活动日志，包括检测到的异常活动",
+    "change_password":"更改密码",
+    "change_password_tagline":"设置唯一密码以保护您的帐户",
+    "factoe_auth":"因素认证",
+    "2fa_tagline_1":"使用 Google 2FA 安全性保护您的帐户。",
+    "2fa_tagline_2":"激活后，您不仅需要输入密码，还需要使用 google Authenticator 移动应用程序输入特殊代码。",
+    "disabled":"禁用",
+    "enable":"使能够",
+    "last_changed":"上次更改",
+
+    "activity_log_alert_message_activited":"活动日志警报已激活",
+    "activity_log_alert_message_deactivited":"活动日志警报已停用",
+    "google_authentication":"谷歌认证",
+    "2fa_alert_message_sussesfully":"验证成功。 2FA 激活",
+    "incorrect_otp":"不正确的一次性密码",
+    "verify":"核实",
+    "2fa_disabled_successfully":"2FA 已成功禁用",
+    "Incorrect_Credentials":"不正确的凭据",
+    "close":"关",
+
+    "password_change_succesfully":"密码修改成功",
+    "incorrect_passeord":"密码错误",
+    "pasword_and_confirm_password_do_not_match":"密码和确认密码不匹配",
+    "change_password_tagline1":"您可以随时更新您的密码。 我们建议您选择一个强密码并定期更新",
+    "old_password":"旧密码",
+    "enter_old_password":"输入旧密码",
+    "change_password_suggestion":"我们建议您的密码中至少包含一个大写字母和一个小写字母 (Aa-Zz)、一个特殊符号（#、&、% 等）和一个数字 (0-9)，以获得最佳强度。",
+    "password_is_required":"密码是必需的",
+    "new_password":"新密码",
+    "enter_new_password":"输入新密码",
+    "confirm_password":"确认密码",
+    "confirm_your_password":"确认你的密码",
+    "save":"节省",
+
+    "whitelisted_ip":"列入白名单的 IP",
+    "ip_address":"IP地址",
+    "enter_correct_ip":"输入正确的 IP",
+    "add_current_ip":"添加当前 IP",
+    "add_ip":"添加IP",
+    "actions":"行动",
+    "delete":"删除",
+    "enter_ip_address":"输入 IP 地址",
+    "ip_removed":"已移除 IP",
+    "ip_added":"已添加 IP",
+
+    "total_balance":"总余额",
+    "total_fund":"总基金",
+    "total_spend":"总支出",
+    "current_balance":"当前余额",
+    "value":"价值",
+    "bouns":"奖金",
+    "total":"全部的",
+
+    "trade_history":"贸易历史",
+    "total_amount_pay":"支付总额",
+    "buying_price":"买价",
+    "pool":"水池",
+    "order":"命令",
+    "amount":"数量",
+    "quentity":" 数量",
+    "minimum_buying_amount":"最低购买金额",
+    "buying":"购买",
+    "are_you_sure":"你确定吗？",
+    "buying_amount":"购买金额",
+    "yes_confirm_it":"是的，确认！",
+    "no_cancel":"不，取消！",
+    "transaction_cancelled":"交易取消",
+
+    "no_record_found":"没有找到记录",
+    "affiliate_list":"会员名单",
+    "level_1":"1级",
+    "level_2":"2级",
+    "level_3":"3级",
+    "withdraw":"提取",
+    "export":"出口",
+    "total_purchased":"购买总额",
+    "total_expense":"总费用",
+    "affiliate_recvd":"会员收到",
+    "handoutS":"讲义",
+    "view":"看法",
+    "sponsor":"赞助",
+    "total_user":"总用户",
+    "total_withdrawal":"总提款",
+    "total_remaining":"总剩余",
+    "your_affiliates":"您的关联公司"
     
 }
