--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -82,8 +82,98 @@
     "news_alert":"Notify me by email about sales and latest news",
     "features_update_alert":"Email me about new features and updates",
     "tips_alert":"Email me about tips on using account",
+    "login_activity_tagline": "Aquí está tu último {{logData.length}} registro de actividades de inicio de sesión.",
 
-    "login_activity_tagline": "Here is your last {{logData.length}} login activities log."
+    "security_settings_tagline": "These settings are helps you keep your account secure.",
+    "save_my_activity_log":"Save my Activity Logs",
+    "unusual_activity_tagline":"You can save your all activity logs including unusual activity detected",
+    "change_password":"Change Password",
+    "change_password_tagline":"Set a unique password to protect your account",
+    "factoe_auth":"Factor Auth",
+    "2fa_tagline_1":"Secure your account with Google 2FA security.",
+    "2fa_tagline_2":"When it is activated you will need to enter not only your password, but also a special code using google Authenticator mobile app.",
+    "disabled":"disabled",
+    "disable": "Disable",
+    "enable":"Enable",
+    "last_changed":"Last changed",
+
+    "activity_log_alert_message_activited":"Activity logs alert activated",
+    "activity_log_alert_message_deactivited":"Activity logs alert deactivated",
+    "google_authentication":"Google Authentication",
+    "2fa_alert_message_sussesfully":"Verified Succesfully. 2FA Activated",
+    "incorrect_otp":"Incorrect OTP",
+    "verify":"Verify",
+    "2fa_disabled_successfully":"2FA Disabled Successfully",
+    "Incorrect_Credentials":"Incorrect Credentials",
+    "close":"Close",
+
+    "password_change_succesfully":"Password Changed Successfully",
+    "incorrect_passeord":"Incorrect Password",
+    "pasword_and_confirm_password_do_not_match":"Password and confirm password do not match",
+    "change_password_tagline1":"You may update your password any time. We suggest you choose a strong password and update it regularly",
+    "old_password":"Old Password",
+    "enter_old_password":"Enter old password",
+    "change_password_suggestion":"We suggest having at least one capital and one lower-case letter (Aa-Zz), one special symbol (#, &, % etc) and one number (0-9) in your password for the best strength.",
+    "password_is_required":"Password is requierd",
+    "new_password":"New Password",
+    "enter_new_password":"Enter new password",
+    "confirm_password":"Confirm Password",
+    "confirm_your_password":"Confirm your password",
+    "save":"Save",
+
+    "whitelisted_ip":"Whitelisted IP",
+    "ip_address":"IP Address",
+    "enter_correct_ip":"Enter correct IP",
+    "add_current_ip":"Add Current IP",
+    "add_ip":"Add IP",
+    "actions":"Actions",
+    "delete":"Delete",
+    "enter_ip_address":"Enter IP Address",
+    "ip_removed":"IP Removed",
+    "ip_added":"IP Added",
+
+    "total_balance":"Total Balance",
+    "total_fund":"Total Fund",
+    "total_spend":"Total Spend",
+    "current_balance":"Current Balance",
+    "value":"Value",
+    "bouns":"Bonus",
+    "total":"Total",
+
+    "trade_history":"TRADE HISTORY",
+    "total_amount_pay":"Total Amount Pay",
+    "buying_price":"Buying Price",
+    "pool":"Pool",
+    "order":"ORDER",
+    "amount":"AMOUNT",
+    "quentity":" Quantity",
+    "minimum_buying_amount":"Minimum Buying Amount",
+    "buying":"BUYING",
+    "are_you_sure":"Are you sure?",
+    "buying_amount":"Buying Amount",
+    "yes_confirm_it":"Yes, confirm it!",
+    "no_cancel":"No, cancel!",
+    "transaction_cancelled":"Transaction Cancelled",
+
+    "no_record_found":"No Record Found",
+    "affiliate_list":"Affiliate List",
+    "level_1":"Level 1",
+    "level_2":"Level 2",
+    "level_3":"Level 3",
+    "withdraw":"Withdraw",
+    "export":"Export",
+    "total_purchased":"Total Purchased",
+    "total_expense":"Total Expense",
+    "affiliate_recvd":"Affiliate Received",
+    "handoutS":"Handout",
+    "view":"View",
+    "sponsor":"Sponsor",
+    "total_user":"Total User",
+    "total_withdrawal":"Total Withdrawal",
+    "total_remaining":"Total Remaining",
+    "your_affiliates":"Your Affiliates"
     
+
+     
 
 }
