--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -82,6 +82,93 @@
     "news_alert":"Avertissez-moi par e-mail des ventes et des dernières nouvelles",
     "features_update_alert":"Envoyez-moi un e-mail à propos des nouvelles fonctionnalités et des mises à jour",
     "tips_alert":"Envoyez-moi des conseils sur l'utilisation du compte",
+    "login_activity_tagline": "Voici votre dernier {{logData.length}} journal d'activité de connexion.",
 
-    "login_activity_tagline": "Voici votre dernier{{logData.length}} journal d'activité de connexion."
+    "security_settings_tagline": "Ces paramètres vous aident à sécuriser votre compte.",
+    "save_my_activity_log":"Enregistrer mes journaux d'activité",
+    "unusual_activity_tagline":"Vous pouvez enregistrer tous vos journaux d'activité, y compris les activités inhabituelles détectées",
+    "change_password":"Changer le mot de passe",
+    "change_password_tagline":"Définissez un mot de passe unique pour protéger votre compte",
+    "factoe_auth":"Facteur d'authentification",
+    "2fa_tagline_1":"Sécurisez votre compte avec la sécurité Google 2FA.",
+    "2fa_tagline_2":"Lorsqu'il est activé, vous devrez entrer non seulement votre mot de passe, mais également un code spécial à l'aide de l'application mobile Google Authenticator.",
+    "disabled":"désactivé",
+    "enable":"Activer",
+    "last_changed":"Dernière modification",
+
+    "activity_log_alert_message_activited":"Alerte des journaux d'activité activée",
+    "activity_log_alert_message_deactivited":"Alerte journaux d'activité désactivée",
+    "google_authentication":"Authentification Google",
+    "2fa_alert_message_sussesfully":"Vérifié avec succès. 2FA activé",
+    "incorrect_otp":"OTP incorrect",
+    "verify":"Vérifier",
+    "2fa_disabled_successfully":"2FA désactivé avec succès",
+    "Incorrect_Credentials":"Identifiants incorrects",
+    "close":"proche",
+
+    "password_change_succesfully":"Le mot de passe a été changé avec succès",
+    "incorrect_passeord":"Mot de passe incorrect",
+    "pasword_and_confirm_password_do_not_match":"Le mot de passe et le mot de passe de confirmation ne correspondent pas",
+    "change_password_tagline1":"Vous pouvez mettre à jour votre mot de passe à tout moment. Nous vous suggérons de choisir un mot de passe fort et de le mettre à jour régulièrement",
+    "old_password":"ancien mot de passe",
+    "enter_old_password":"Entrez l'ancien mot de passe",
+    "change_password_suggestion":"Nous vous suggérons d'avoir au moins une lettre majuscule et une lettre minuscule (Aa-Zz), un symbole spécial (#, &, % etc.) et un chiffre (0-9) dans votre mot de passe pour la meilleure force.",
+    "password_is_required":"Mot de passe requis",
+    "new_password":"nouveau mot de passe",
+    "enter_new_password":"Entrez un nouveau mot de passe",
+    "confirm_password":"Confirmez le mot de passe",
+    "confirm_your_password":"Confirmer votre mot de passe",
+    "save":"Enregistrer",
+
+    "whitelisted_ip":"IP sur liste blanche",
+    "ip_address":"Adresse IP",
+    "enter_correct_ip":"Entrez l'adresse IP correcte",
+    "add_current_ip":"Ajouter l'IP actuelle",
+    "add_ip":"Ajouter une IP",
+    "actions":"Actions",
+    "delete":"Effacer",
+    "enter_ip_address":"Entrez l'adresse IP",
+    "ip_removed":"IP supprimée",
+    "ip_added":"IP ajoutée",
+
+    "total_balance":"Solde total",
+    "total_fund":"Fonds total",
+    "total_spend":"Dépense totale",
+    "current_balance":"Solde actuel",
+    "value":"Évaluer",
+    "bouns":"Prime",
+    "total":"Total",
+
+    "trade_history":"HISTOIRE COMMERCIALE",
+    "total_amount_pay":"Montant total",
+    "buying_price":"Prix ​​d'achat",
+    "pool":"Piscine",
+    "order":"ORDRE",
+    "amount":"MONTANT",
+    "quentity":" Quantité",
+    "minimum_buying_amount":"Montant d'achat minimum",
+    "buying":"ACHAT",
+    "are_you_sure":"Êtes-vous sûr?",
+    "buying_amount":"Montant d'achat",
+    "yes_confirm_it":"Oui, confirmez-le !",
+    "no_cancel":"Non, annulez !",
+    "transaction_cancelled":"Transaction annulée",
+
+    "no_record_found":"Aucun Enregistrement Trouvé",
+    "affiliate_list":"Liste des affiliés",
+    "level_1":"Niveau 1",
+    "level_2":"Niveau 2",
+    "level_3":"Niveau 3",
+    "withdraw":"Se désister",
+    "export":"Exporter",
+    "total_purchased":"Total acheté",
+    "total_expense":"Achat total",
+    "affiliate_recvd":"Affilié reçu",
+    "handoutS":"Polycopié",
+    "view":"Voir",
+    "sponsor":"Parrainer",
+    "total_user":"Nombre total d'utilisateurs",
+    "total_withdrawal":"Retrait total",
+    "total_remaining":"Total restant",
+    "your_affiliates":"Vos affiliés"
 }
