--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -82,5 +82,96 @@
     "new_browser_alert":"أرسل لي بريدًا إلكترونيًا إذا تم استخدام متصفح جديد لتسجيل الدخول",
     "news_alert":"أعلمني عبر البريد الإلكتروني بالمبيعات وآخر الأخبار",
     "features_update_alert":"أرسل لي عن الميزات والتحديثات الجديدة",
-    "tips_alert":"راسلني عن النصائح حول استخدام الحساب"
+    "tips_alert":"راسلني عن النصائح حول استخدام الحساب",
+    "login_activity_tagline": "هذا هو الأخير الخاص بك {{logData.length}} سجل أنشطة تسجيل الدخول.",
+
+    "security_settings_tagline": "تساعدك هذه الإعدادات في الحفاظ على حسابك آمنًا.",
+    "save_my_activity_log":"حفظ سجلات النشاط الخاصة بي",
+    "unusual_activity_tagline":"يمكنك حفظ جميع سجلات الأنشطة الخاصة بك بما في ذلك اكتشاف نشاط غير عادي",
+    "change_password":"غير كلمة السر",
+    "change_password_tagline":"قم بتعيين كلمة مرور فريدة لحماية حسابك",
+    "factoe_auth":"عامل المصادقة",
+    "2fa_tagline_1":"قم بتأمين حسابك باستخدام أمان Google 2FA.",
+    "2fa_tagline_2":"عندما يتم تنشيطه ، ستحتاج إلى إدخال ليس فقط كلمة المرور الخاصة بك ، ولكن أيضًا إدخال رمز خاص باستخدام تطبيق Google Authenticator للجوال.",
+    "disabled":"معاق",
+    "enable":"يُمكَِن",
+    "last_changed":"آخر تعديل",
+
+    "activity_log_alert_message_activited":"تم تفعيل تنبيه سجلات النشاط",
+    "activity_log_alert_message_deactivited":"تم إلغاء تنشيط تنبيه سجلات النشاط",
+    "google_authentication":"مصادقة جوجل",
+    "2fa_alert_message_sussesfully":"تم التحقق بنجاح. تنشيط 2FA",
+    "incorrect_otp":"OTP غير صحيح",
+    "verify":"يؤكد",
+    "2fa_disabled_successfully":"تم تعطيل 2FA بنجاح",
+    "Incorrect_Credentials":"أوراق غير صحيحة",
+    "close":"قريب",
+
+    "password_change_succesfully":"تم تغيير الرقم السري بنجاح",
+    "incorrect_passeord":"كلمة سر خاطئة",
+    "pasword_and_confirm_password_do_not_match":"كلمة المرور وتأكيد كلمة المرور غير متطابقين",
+    "change_password_tagline1":"يمكنك تحديث كلمة المرور الخاصة بك في أي وقت. نقترح عليك اختيار كلمة مرور قوية وتحديثها بانتظام",
+    "old_password":"كلمة المرور القديمة",
+    "enter_old_password":"أدخل كلمة المرور القديمة",
+    "change_password_suggestion":"نقترح وجود حرف كبير واحد على الأقل وحرف صغير واحد (Aa-Zz) ، ورمز خاص واحد (# ، & ،٪ إلخ) ورقم واحد (0-9) في كلمة مرورك للحصول على أفضل قوة.",
+    "password_is_required":"كلمة المرور مطلوبة",
+    "new_password":"كلمة السر الجديدة",
+    "enter_new_password":"أدخل كلمة مرور جديدة",
+    "confirm_password":"تأكيد كلمة المرور",
+    "confirm_your_password":"أكد رقمك السري",
+    "save":"يحفظ",
+
+    "whitelisted_ip":"عنوان IP المدرج في القائمة البيضاء",
+    "ip_address":"عنوان IP",
+    "enter_correct_ip":"أدخل عنوان IP الصحيح",
+    "add_current_ip":"أضف عنوان IP الحالي",
+    "add_ip":"أضف IP",
+    "actions":"أجراءات",
+    "delete":"حذف",
+    "enter_ip_address":"أدخل عنوان IP",
+    "ip_removed":"تمت إزالة IP",
+    "ip_added":"تمت إضافة IP",
+
+    "total_balance":"إجمالي الرصيد",
+    "total_fund":"إجمالي الصندوق",
+    "total_spend":"إجمالي الإنفاق",
+    "current_balance":"الرصيد الحالي",
+    "value":"قيمة",
+    "bouns":"علاوة",
+    "total":"المجموع",
+
+    "trade_history":"تاريخ التجارة",
+    "total_amount_pay":"إجمالي المبلغ المدفوع",
+    "buying_price":"سعر الشراء",
+    "pool":"حمام سباحة",
+    "order":"ترتيب",
+    "amount":"مقدار",
+    "quentity":" كمية",
+    "minimum_buying_amount":"الحد الأدنى من مبلغ الشراء",
+    "buying":"شراء",
+    "are_you_sure":"هل أنت واثق؟",
+    "buying_amount":"مبلغ الشراء",
+    "yes_confirm_it":"نعم ، قم بتأكيدها!",
+    "no_cancel":"لا ، إلغاء!",
+    "transaction_cancelled":"تم إلغاء الصفقة",
+
+    "no_record_found":"لا يوجد سجلات",
+    "affiliate_list":"قائمة المنتسبين",
+    "level_1":"المستوى 1",
+    "level_2":"المستوي 2",
+    "level_3":"مستوى 3",
+    "withdraw":"ينسحب",
+    "export":"يصدّر",
+    "total_purchased":"إجمالي المشتريات",
+    "total_expense":"المصاريف الكلية",
+    "affiliate_recvd":"تلقى الشركة التابعة",
+    "handoutS":"مذكرة",
+    "view":"رأي",
+    "sponsor":"كفيل",
+    "total_user":"إجمالي المستخدم",
+    "total_withdrawal":"إجمالي الانسحاب",
+    "total_remaining":"المجموع المتبقي",
+    "your_affiliates":"الشركات التابعة لك"
+
+
 }   
