--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -82,5 +82,93 @@
     "new_browser_alert":"Enviarme un correo electrónico si se utiliza un nuevo navegador para iniciar sesión",
     "news_alert":"Notificarme por correo electrónico sobre ventas y últimas noticias",
     "features_update_alert":"Enviarme un correo electrónico sobre nuevas funciones y actualizaciones",
-    "tips_alert":"Envíeme un correo electrónico sobre consejos sobre el uso de la cuenta"
+    "tips_alert":"Envíeme un correo electrónico sobre consejos sobre el uso de la cuenta",
+
+    "security_settings_tagline": "Estas configuraciones lo ayudan a mantener su cuenta segura.",
+    "save_my_activity_log":"Guardar mis registros de actividad",
+    "unusual_activity_tagline":"Puede guardar todos sus registros de actividad, incluida la actividad inusual detectada",
+    "change_password":"Cambia la contraseña",
+    "change_password_tagline":"Establezca una contraseña única para proteger su cuenta",
+    "factoe_auth":"Autorización de factor",
+    "2fa_tagline_1":"Proteja su cuenta con la seguridad 2FA de Google.",
+    "2fa_tagline_2":"Cuando esté activado, deberá ingresar no solo su contraseña, sino también un código especial utilizando la aplicación móvil Google Authenticator.",
+    "disabled":"desactivado",
+    "enable":"Habilitar",
+    "last_changed":"Último cambio",
+
+    "activity_log_alert_message_activited":"Alerta de registros de actividad activada",
+    "activity_log_alert_message_deactivited":"Alerta de registros de actividad desactivada",
+    "google_authentication":"Autenticación de Google",
+    "2fa_alert_message_sussesfully":"Verificado con éxito. 2FA activado",
+    "incorrect_otp":"OTP incorrecta",
+    "verify":"Verificar",
+    "2fa_disabled_successfully":"2FA deshabilitado con éxito",
+    "Incorrect_Credentials":"Credenciales incorrectas",
+    "close":"Cerca",
+
+    "password_change_succesfully":"Contraseña cambiada con éxito",
+    "incorrect_passeord":"Contraseña incorrecta",
+    "pasword_and_confirm_password_do_not_match":"Contraseña y confirmar contraseña no coinciden",
+    "change_password_tagline1":"Puede actualizar su contraseña en cualquier momento. Le sugerimos que elija una contraseña segura y la actualice periódicamente.",
+    "old_password":"Contraseña anterior",
+    "enter_old_password":"Ingrese la contraseña anterior",
+    "change_password_suggestion":"Sugerimos tener al menos una letra mayúscula y una minúscula (Aa-Zz), un símbolo especial (#, &, %, etc.) y un número (0-9) en su contraseña para obtener la mejor seguridad.",
+    "password_is_required":"se requiere contraseña",
+    "new_password":"Nueva contraseña",
+    "enter_new_password":"Ingrese nueva clave",
+    "confirm_password":"Confirmar contraseña",
+    "confirm_your_password":"Confirmar la contraseña",
+    "save":"Ahorrar",
+
+    "whitelisted_ip":"IP en la lista blanca",
+    "ip_address":"Dirección IP",
+    "enter_correct_ip":"Ingrese la IP correcta",
+    "add_current_ip":"Agregar IP actual",
+    "add_ip":"Agregar IP",
+    "actions":"Acción",
+    "delete":"Borrar",
+    "enter_ip_address":"Ingrese la dirección IP",
+    "ip_removed":"IP eliminada",
+    "ip_added":"IP añadida",
+
+    "total_balance":"Balance total",
+    "total_fund":"Fondo total",
+    "total_spend":"Gasto total",
+    "current_balance":"Saldo actual",
+    "value":"Valor",
+    "bouns":"el bono",
+    "total":"Total",
+
+    "trade_history":"HISTORIA COMERCIAL",
+    "total_amount_pay":"Monto total de pago",
+    "buying_price":"Precio de compra",
+    "pool":"Piscina",
+    "order":"ORDENAR",
+    "amount":"MONTO",
+    "quentity":"Cantidad",
+    "minimum_buying_amount":"Importe mínimo de compra",
+    "buying":"COMPRAR",
+    "are_you_sure":"Estas seguro",
+    "buying_amount":"Cantidad de compra",
+    "yes_confirm_it":"¡Sí, confírmalo!",
+    "no_cancel":"¡No, cancela!",
+    "transaction_cancelled":"transacción cancelada",
+
+    "no_record_found":"ningún record fue encontrado",
+    "affiliate_list":"Lista de afiliados",
+    "level_1":"Nivel 1",
+    "level_2":"Nivel 2",
+    "level_3":"Nivel 3",
+    "withdraw":"Retirar",
+    "export":"Exportar",
+    "total_purchased":"Compra total",
+    "total_expense":"Gasto total",
+    "affiliate_recvd":"Afiliado recibido",
+    "handoutS":"Repartir",
+    "view":"Vista",
+    "sponsor":"Patrocinador",
+    "total_user":"Usuario total",
+    "total_withdrawal":"Retiro Total",
+    "total_remaining":"Total restante",
+    "your_affiliates":"Tus afiliados"
 }
