--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -55,7 +55,7 @@
     "device":"Device",
     "time":"Time",
     "analog_wallet_balance":"Wallet Balance",
-    "personal_information":"Personal Infomation",
+    "personal_information":"Personal Information",
     "account_activity":"Account Activity",
     "security_settings":"Security Settings",
     "whitelisting":"Whitelisting",
